--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
     <script src="js/app.js" defer></script>
 </head>
 <body>
-    
+    <div class="calculator">
+        <div class="display">
+            2+4
+        </div>
+        <div class="buttons">
+            <button>AC</button>
+            <button>C</button>
+            <button>%</button>
+            <button>/</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>+</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>-</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>x</button>
+            <button>0</button>
+            <button>.</button>
+            <button id="equal">=</button>
+            
+        </div>
+    </div>
 </body>
 </html>
