add: eventListeners to buttons
* add events eventListeners to all buttons except the equal button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,30 +9,29 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/app.js" defer></script>
 </head>
+
 <body>
     <div class="calculator">
-        <div class="display">
-            2+4
-        </div>
+        <div class="display">5 + 6 - 7</div>
         <div class="buttons">
-            <button>AC</button>
-            <button>C</button>
-            <button>%</button>
-            <button>/</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>x</button>
-            <button>0</button>
-            <button>.</button>
+            <button class="clear-all">AC</button>
+            <button class="clear">C</button>
+            <button class="button"> % </button>
+            <button class="button"> / </button>
+            <button class="button">1</button>
+            <button class="button">2</button>
+            <button class="button">3</button>
+            <button class="button"> + </button>
+            <button class="button">4</button>
+            <button class="button">5</button>
+            <button class="button">6</button>
+            <button class="button"> - </button>
+            <button class="button">7</button>
+            <button class="button">8</button>
+            <button class="button">9</button>
+            <button class="button"> x </button>
+            <button class="button">0</button>
+            <button class="button">.</button>
             <button id="equal">=</button>
             
         </div>
