make: the calculator work
* add the rest eventListeners
* handle different situations and bugs associated

problem => handle numbers with decimal point

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
 
 <body>
     <div class="calculator">
-        <div class="display">5 + 6 - 7</div>
+        <div class="display">0</div>
         <div class="buttons">
             <button class="clear-all">AC</button>
             <button class="clear">C</button>
-            <button class="button"> % </button>
-            <button class="button"> / </button>
-            <button class="button">1</button>
-            <button class="button">2</button>
-            <button class="button">3</button>
-            <button class="button"> + </button>
-            <button class="button">4</button>
-            <button class="button">5</button>
-            <button class="button">6</button>
-            <button class="button"> - </button>
-            <button class="button">7</button>
-            <button class="button">8</button>
-            <button class="button">9</button>
-            <button class="button"> x </button>
-            <button class="button">0</button>
-            <button class="button">.</button>
+            <button class = "operation"> % </button>
+            <button class = "operation"> / </button>
+            <button class = "digits">1</button>
+            <button class = "digits">2</button>
+            <button class = "digits">3</button>
+            <button class = "operation"> + </button>
+            <button class = "digits">4</button>
+            <button class = "digits">5</button>
+            <button class = "digits">6</button>
+            <button class = "operation"> - </button>
+            <button class = "digits">7</button>
+            <button class = "digits">8</button>
+            <button class = "digits">9</button>
+            <button class = "operation"> x </button>
+            <button class = "digits">0</button>
+            <button class = "digits">.</button>
             <button id="equal">=</button>
             
         </div>
