add: power operator

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <button class = "operation"> x </button>
             <button class = "digits">0</button>
             <button class = "digits">.</button>
+            <button class="operation"> ^ </button>
             <button id="equal">=</button>
             
         </div>
